[package]
name = "menaechmus_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "menaechmus"
path = "src/blockchain/lib.rs"

[[bin]]
name = "miner"
path = "src/miner/main.rs"

[[bin]]
name = "node"
path = "src/node/main.rs"

[dependencies]
sha2 = "0.10.2"
serde = "1.0.136"
serde_derive = "1.0.136"
bincode = "1.3.3"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json"] }
