[package]
name = "menaechmus_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "menaechmus"
path = "src/blockchain/lib.rs"

[[bin]]
name = "miner"
path = "src/miner/main.rs"

[[bin]]
name = "node"
path = "src/node/main.rs"

[dependencies]
sha2 = "0.10.2"
serde = { version = "1.0.136", features = ["rc"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"
bincode = "1.3.3"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json"] }
futures = "0.3.21"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.14"
clap = { version = "3.1.5", features = ["derive"] }
